# xyz2graph

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  molecular_graph.py  objects.inv  plot.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  sitemap.xml  xyz2graph.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
Examples/: dsgdb9nsd_030472.html  dsgdb9nsd_074683.html  dsgdb9nsd_074683.xyz  dsgdb9nsd_081545.html  example.html  example.xyz
api/cli/: index.html
api/molgraph/: index.html
binder/: environment.yml  requirements.txt  xyz2graph.ipynb
cli/: index.html
docs/: cli.md  getting-started.md  index.md  python.md
docs/api/: cli.md  molgraph.md
docs/stylesheets/: extra.css
examples/: dsgdb9nsd_030472.xyz  dsgdb9nsd_081545.xyz
getting-started/: index.html
license/: index.html
python/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_cli.py  test_graph_branches.py  test_helpers.py  test_molecule.py  test_molgraph.py  test_visualization.py
xyz2graph/: __init__.py  buttons.py  cli.py  constants.py  geometry.py  graph.py  helpers.py  labels.py  layout_config.py  logging.py  molecule.py  objects.py  shapes.py  visualization.py  xyz2graph.py  xyz2graph_cli.py
